# competitive_intel

./: .gitignore  CLAUDE.md  FORliam.md  RATE_LIMITING.md  README.md
competitive_intel/: app.py  app_portfolio.py  pyproject.toml
competitive_intel/src/competitive_intel/: crew.py  graph.py  main.py
competitive_intel/src/competitive_intel/config/: agents.yaml  tasks.yaml
competitive_intel/src/competitive_intel/tools/: __init__.py
guides/: 01_graph_explained.md  02_app_explained.md  03_main_explained.md  04_tools_explained.md  05_yaml_configs_explained.md
huggingface/: .gitignore  DEPLOYMENT.md  README.md  app.py  graph.py  requirements.txt
huggingface/config/: agents.yaml  tasks.yaml
huggingface_portfolio/: README.md  app.py
huggingface_portfolio/tools/: __init__.py
