[project]
name = "competitive_intel"
version = "0.1.0"
description = "Competitive intelligence monitor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.108.0,<2.0.0",
    "anthropic>=0.40.0",
    "gradio>=5.22.0",
]

[project.scripts]
competitive_intel = "competitive_intel.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
