[project]
name = "competitive_intel"
version = "0.2.0"
description = "Competitive intelligence monitor using LangGraph"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "langgraph>=0.4.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "gradio>=5.22.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "fpdf2>=2.8.0",
    "markdown>=3.5.0",
]

[project.scripts]
competitive_intel = "competitive_intel.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
